--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gitlab",
-  "version": "1.7.1+dev",
+  "name": "gitlab-olalonde",
+  "version": "2.0.0",
   "description": "GitLab API Nodejs library.",
   "main": "lib/index.js",
   "directories": {
